# CLOUDSVST

./: .gitmodules  CMakeLists.txt  build_installer.sh  setup-project.sh
.copilot/handoff/: codeblock-1.md  codeblock-10.md  codeblock-11.md  codeblock-2.md  codeblock-3.md  codeblock-4.md  codeblock-5.md  codeblock-6.md  codeblock-7.md  codeblock-8.md  codeblock-9.md  copilot-handoff.md  design.md  spec.md
.github/agents/: juce-builder.agent.md
.github/hooks/: validation.hooks.json
Source/: CloudsEngine.cpp  CloudsEngine.h  DebugProbe.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleRateAdapter.cpp  SampleRateAdapter.h
Source/stubs/clouds/drivers/: debug_pin.h
Source/stubs/clouds/drivers/debug/: _pin.h
Tests/: AudioProcessingTests.cpp  BufferedStretchTest.cpp  DebugStretchTest.cpp  HangDebugTest.cpp  PluginTests.cpp  SimpleStretchTest.cpp  StretchDebugDetail.cpp  StretchDebugDetail2.cpp  StretchDebugDetail3.cpp  StretchDebugDetail4.cpp  StretchDebugDetail5.cpp  StretchDebugDetail6.cpp  StretchModeTest.cpp  StretchOutputTest.cpp  StretchOutputTest2.cpp  StretchTraceTest.cpp
scripts/: fix-counter.sh
